fixed overflow

--- a/cleaner.css
+++ b/cleaner.css
@@ -1,4 +1,3 @@
 body {
-  display: flex;
   margin: 0px;
 }
